FIX : fixed minor CSS bug with overflow-x:hidden

--- a/frontend/src/app/features/home/floating-cards/floating-cards.component.scss
+++ b/frontend/src/app/features/home/floating-cards/floating-cards.component.scss
@@ -1,6 +1,6 @@
 .floating-container {
   position: relative;
-  width: 98vw;
+  width: 100vw;
   height: 100dvh;
   overflow: hidden;
   pointer-events: none;
