--- a/frontend/src/global-styles/styles.scss
+++ b/frontend/src/global-styles/styles.scss
@@ -20,6 +20,7 @@ html {
 html,
 body {
   min-height: 100%;
+  overflow-x: hidden;
 }
 
 body {
